--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
   "license": "MIT",
   "scripts": {
     "start": "npm run dev",
-    "dev": "concurrently \"tsc -w\" \"nodemon ./dist/main.js\"",
+    "dev": "concurrently \"tsc -w\" \"nodemon --inspect ./dist/main.js\"",
     "test": "test"
   },
   "devDependencies": {
+    "@types/node": "^10.12.5",
     "concurrently": "^4.0.1",
     "nodemon": "^1.18.6",
     "typescript": "^3.1.6"
+  },
+  "dependencies": {
+    "@types/express": "^4.16.0",
+    "express": "^4.16.4"
   }
 }
