--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "test": "test"
   },
   "devDependencies": {
-    "@types/node": "^10.12.5",
     "concurrently": "^4.0.1",
     "nodemon": "^1.18.6",
-    "typescript": "^3.1.6"
+    "typescript": "^3.1.6",
+    "@types/express": "^4.16.0",
+    "@types/node": "^10.12.5"
   },
   "dependencies": {
-    "@types/express": "^4.16.0",
     "express": "^4.16.4"
   }
 }
